# BrowserC

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  packages.md
.cmake/api/v1/reply/: cache-v2-3bbcd99ecdc7bd69c41c.json  cmakeFiles-v1-55b32303ad894b27c580.json  codemodel-v2-8da8ab6acdfd8df81eea.json  directory-extern.curl-Release-83fee3c2903138dd84f2.json  directory-extern.curl.lib-Release-19fc85e8206ebfb93e1d.json  directory-extern.curl.src-Release-75ecd326836b3f20fa77.json  directory-extern.libtidy-Release-a2e864533ed94cf33063.json  directory-src.datamanager-Release-79b04d0f32f31bf1358f.json  directory-src.javascript-Release-03d24781b2c464026282.json  directory-src.tabs-Release-51352c692faaddb62134.json  directory-src.tabs.tab-Release-80e0d88a34a313e376f5.json  index-2023-07-14T05-50-12-0446.json  target-AppData-Release-4c322f2aaa2113e1afe9.json  target-JavascriptHandler-Release-a3e74c4da14ecabb2a87.json  target-MyApp-Release-b3ad3bafdb45a3894b20.json  target-RENDER-Release-75e028c1c5a2c131412e.json  target-TAB-Release-41f669849d84ee44bfeb.json  target-TABMANAGER-Release-872b5f2cae52d8b70c70.json  target-browser_build-Release-e146707e5ef56d7834fc.json  target-curl-Release-a3c500ff8247d332277f.json  target-curl_uninstall-Release-7ab3bd43927ed68f5090.json  target-libcurl-Release-4bfadf2cde24ba0abfad.json  target-man-Release-138f5af4b666fe995d45.json  target-tidy-Release-ee2508586922c98f8cf7.json  target-tidy-share-Release-a56eba2e886debc575b7.json  target-tidy-static-Release-7c8063251a433164b976.json
assets/: index.html
config.tests/no_direct_extern_access/: CMakeCache.txt  Makefile  cmake_install.cmake
config.tests/precompile_header/: CMakeCache.txt  Makefile  cmake_install.cmake
config.tests/separate_debug_info/: CMakeCache.txt  Makefile  cmake_install.cmake  objcopytest  objcopytest.debug
config.tests/x86intrin/: CMakeCache.txt  Makefile  cmake_install.cmake  x86intrin
lib/: libgtest.so.1.10.0  libgtest_main.so.1.10.0
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/browser/: package-lock.json
src/browser/src/: Application.tsx  Comms.tsx  Context.tsx  index.d.ts  main.tsx
src/browser/src/browserprops/: Tab.ts  TabManager.tsx
src/browser/src/tabbar/: MainUi.css  MainUi.tsx
src/browser/tools/webpack/: webpack.config.prod.js
src/datamanager/: AppData.cpp  AppData.h  CMakeLists.txt  Makefile  cmake_install.cmake
src/html/: CMakeLists.txt  HTML.h  HTMLParser.cpp  HTMLParser.h  Makefile  Parse.cpp  Parse.h  cmake_install.cmake
src/javascript/: CMakeLists.txt  JavascriptHandler.cpp  JavascriptHandler.h  Makefile  V8Engine.cpp  V8Engine.h  cmake_install.cmake
src/render/: App.cpp  App.h  CMakeLists.txt  Makefile  cmake_install.cmake
src/render/EventHandler/: EventHandler.h
src/render/Events/: JavaScript.cpp  JavaScript.h
src/render/Loader/: FileSystem.h  Renderer.h
src/tabs/: CMakeLists.txt  Makefile  TabManager.cpp  TabManager.h  cmake_install.cmake
src/tabs/tab/: CMakeLists.txt  Makefile  Tab.cpp  Tab.h  cmake_install.cmake
